# databend-aiserver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
databend_aiserver/: __init__.py  config.py  main.py  runtime.py  server.py
databend_aiserver/stages/: operator.py
databend_aiserver/udfs/: __init__.py  docparse.py  embeddings.py  files.py  stage.py
tests/: conftest.py
tests/data/: sample.docx
tests/integration/: __init__.py  conftest.py  test_docparse_integration.py  test_embeddings_integration.py  test_files_integration.py  test_listing_integration.py
tests/unit/: conftest.py  test_docparse_path.py  test_embeddings.py  test_files.py  test_listing.py  test_opendal_api.py  test_operator_options.py  test_runtime.py  test_stage_io.py
