[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databend-aiserver"
version = "0.1.0"
description = "Databend AI Server: bridge object storage and AI workloads via UDFs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Databend Labs" }]
dependencies = [
    "databend-udf==0.2.8",
    "opendal==0.45.1",
    "pypdf==4.0.0",
    "python-docx==1.1.0",
    "uvicorn>=0.29.0",
    "huggingface-hub==0.36.0",
    "transformers==4.51.0",
    "torch==2.3.1",
    "accelerate==0.33.0",
    "docling==2.63.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
databend-aiserver = "databend_aiserver.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["databend_aiserver*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow and requiring Hugging Face model downloads",
]
