[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databend-aiserver"
version = "0.1.1"
description = "Databend AI Server: bridge object storage and AI workloads via UDFs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Databend Labs" }]
dependencies = [
    "databend-udf==0.2.14",
    "opendal==0.45.1",
    "pypdf==4.0.0",
    "python-docx==1.2.0",
    "uvicorn>=0.29.0",
    "huggingface-hub==0.36.0",
    "transformers==4.57.3",
    "torch==2.9.1",
    "accelerate==1.12.0",
    "docling==2.63.0",
    # ASR / Whisper stack (installed by default so `uv sync` is enough)
    "openai-whisper>=20231117",
    "imageio-ffmpeg>=0.5.1",
    "numba>=0.62.1",
    "llvmlite>=0.45.1",
    "more-itertools>=10.8.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]
asr = [
    "openai-whisper>=20231117",
    # Includes a statically linked ffmpeg binary so deployments don't require a system package.
    "imageio-ffmpeg>=0.5.1",
    "numba>=0.62.1",
    "llvmlite>=0.45.1",
    "more-itertools>=10.8.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
databend-aiserver = "databend_aiserver.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["databend_aiserver*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow and requiring Hugging Face model downloads",
]
filterwarnings = [
    "ignore:Field `generate_table_images` is deprecated:DeprecationWarning",
    "ignore:Field `annotations` is deprecated:DeprecationWarning",
]
